# codecrafters-shell-rust

./: Cargo.toml  README.md
src/: main.rs  redirection.rs
